# T8Client

./: .gitignore  README.md  pyproject.toml
scripts/: check_connection.py  check_get_spectra.py  check_get_wave  check_list_spectra.py  check_list_waves.py  check_plot_spectra.py  check_plot_wave.py  compare_spectra.py  test_connection.py
src/t8_client/: api.py  cli.py
